--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ wp-content/*
 # ignore these plugins
 wp-content/plugins/hello.php
 
-# ignore specific themes
-wp-content/themes/twenty*/
+# ignore specific themes change 
+
 
 # ignore node dependency directories
 node_modules/
